<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pgizka.simplecallrecorder.recordings.RecordingDetailFragment"

    >



    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/recording_detail_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        card_view:cardElevation="4dp"
        card_view:cardCornerRadius="0dp"
        >

        <android.support.v7.widget.GridLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnCount="2"
            app:rowCount="4"
            android:layout_gravity="center"
            android:padding="8dp"
            >

            <ImageView
                android:id="@+id/recording_detail_main_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/defult_contact_image"
                app:layout_rowSpan="4"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_column="0"
                app:layout_gravity="center"
                >

            </ImageView>


            <ImageView
                android:id="@+id/recording_detail_call_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/call_arrow_outgoing"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_column="1"
                app:layout_rowWeight="1"
                >

            </ImageView>

            <TextView
                android:id="@+id/recording_detail_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_row="1"
                app:layout_rowWeight="1"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="center"
                android:text="12:43\n12-05-2015 "
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                >

            </TextView>


            <TextView
                android:id="@+id/recording_detail_duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_row="2"
                app:layout_rowWeight="1"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="center"
                android:text="0:00:57"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                >

            </TextView>


            <TextView
                android:id="@+id/recording_detail_size_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_row="3"
                app:layout_rowWeight="1"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_gravity="center"
                android:text="258KB"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                >

            </TextView>


        </android.support.v7.widget.GridLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.GridLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view"
        android:layout_below="@id/recording_detail_card_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        app:columnCount="2"
        android:padding="8dp"

        >


        <Button
            android:id="@+id/recording_detail_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording_detail_delete_button"
            android:drawableTop="@drawable/ic_action_delete_100"
            app:layout_columnWeight="1"

            >
        </Button>


        <Button
            android:id="@+id/recording_detail_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording_detail_share_button"
            android:drawableTop="@drawable/ic_action_share"
            app:layout_columnWeight="1"
            >
        </Button>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/recording_detail_notes_edit_text"
            android:hint="@string/recording_detail_add_notes"
            app:layout_columnWeight="1"
            app:layout_columnSpan="2"/>


    </android.support.v7.widget.GridLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        card_view:cardElevation="2dp"
        card_view:cardCornerRadius="2dp"
        android:layout_margin="8dp"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/recording_detail_play_image"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_action_play"
                />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recording_detail_seek_bar"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@id/recording_detail_play_image"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0:00:00"
                android:id="@+id/recording_detail_play_position_text"
                android:layout_above="@+id/recording_detail_seek_bar"
                android:layout_toRightOf="@+id/recording_detail_play_image"
                android:layout_toEndOf="@+id/recording_detail_play_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0:02:45"
                android:id="@+id/recording_detail_play_duration_text"
                android:layout_above="@+id/recording_detail_seek_bar"
                android:layout_alignRight="@+id/recording_detail_seek_bar"
                android:layout_alignEnd="@+id/recording_detail_seek_bar"
                android:layout_marginRight="8dp"/>


        </RelativeLayout>

    </android.support.v7.widget.CardView>



</RelativeLayout>
